feat: 4주차 > advanced > 과제 솔루션 추가

--- a/packages/assignment-4/index.advanced.html
+++ b/packages/assignment-4/index.advanced.html
@@ -8,6 +8,6 @@
 </head>
 <body class="bg-gray-100 p-8">
 <main id="app"></main>
-<script type="module" src="/src/main.js"></script>
+<script type="module" src="/src/advanced/main.advanced.js"></script>
 </body>
 </html>
